Bug 488813 - Shake cursor inoperable with animation speed set to instant
Summary: Shake cursor inoperable with animation speed set to instant
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-20 18:29 UTC by Parker Reed
Modified: 2024-06-22 00:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Parker Reed 2024-06-20 18:29:36 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY

With animation speed set to instant, shake cursor does not work.

STEPS TO REPRODUCE
1. Set animations to instant
2. Enable Shake Cursor under accessibility 
3. Try to shake cursor

OBSERVED RESULT

Cursor stays the same size

EXPECTED RESULT

Cursor to inflate when shaken

SOFTWARE/OS VERSIONS 
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.8.0
Comment 1 Parker Reed 2024-06-20 18:31:34 UTC
Subsequently the cursor size changing is entirely dependent on animation speed.

If you have it set really low, it takes a long time to inflate and deflate.
Comment 2 Nate Graham 2024-06-20 19:09:22 UTC
hah, confirmed. It's also pretty weird with the speed set to a very slow value.

Maybe we should opt this out of respecting the global animation scale.
Comment 3 Bug Janitor Service 2024-06-20 19:12:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5951
Comment 4 Vlad Zahorodnii 2024-06-20 19:38:24 UTC
Git commit 9276d28b3d6b5b8e572fdd46658734de54ef917f by Vlad Zahorodnii.
Committed on 20/06/2024 at 19:28.
Pushed by vladz into branch 'master'.

plugins/shakecursor: Ignore animation speed

From the user perspective, shaking cursor is not perceived as an
animation, so let's ignore the global animation speed factor.

M  +2    -4    src/plugins/shakecursor/shakecursor.cpp

https://invent.kde.org/plasma/kwin/-/commit/9276d28b3d6b5b8e572fdd46658734de54ef917f
Comment 5 Vlad Zahorodnii 2024-06-20 19:55:08 UTC
Git commit 64f1455b1153214e9825953609bd3b63bfd9c74a by Vlad Zahorodnii.
Committed on 20/06/2024 at 19:41.
Pushed by vladz into branch 'Plasma/6.1'.

plugins/shakecursor: Ignore animation speed

From the user perspective, shaking cursor is not perceived as an
animation, so let's ignore the global animation speed factor.


(cherry picked from commit 9276d28b3d6b5b8e572fdd46658734de54ef917f)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +2    -4    src/plugins/shakecursor/shakecursor.cpp

https://invent.kde.org/plasma/kwin/-/commit/64f1455b1153214e9825953609bd3b63bfd9c74a